assets/css/index.css
/* ... */
::selection,
::-moz-selection {
  background: var(--link-hover);
}

/* body */
body {
  margin: 0;
  font-size: 1rem;
  background-color: var(--mantle);
  display: flex;
  flex-direction: column;
  height: 100vh;
}
@media (min-width: 20rem) {
  body {
    font-size: calc(1rem + 0.00625 * (100vw - 20rem));
  }
}

@media (min-width: 40rem) {
  body {
    font-size: 1.125rem;
  }
}

body header,
body footer {
  position: relative;
  padding: 0;
}

body article,
body main {
  position: relative;
  background-color: var(--base);
  word-break: break-word;
}

body article {
  padding: 0.1rem 1.2rem 2rem 1.2rem;
}

body main {
  padding: 0;
}
@media (min-width: 768px) {
  body main {
    padding: 0.1rem 1.2rem 2rem 1.2rem;
  }
}

body header > *,
body footer > *,
body main > * {
  max-width: 50rem;
  margin: 0 auto;
}

body main > * {
  background-color: var(--base);
}

body > header {
  margin-bottom: 1.5em;
  padding: 0 1.2rem 0 1.2rem;
}

body > header h1 {
  padding-top: 1.2em;
  font-size: 1.5em;
}

body > header h1 a {
  color: var(--link-same-domain);
  text-decoration: none;
}

body > header h1 a:visited {
  color: var(--link-same-domain);
}

body > header p {
  /* margin: 0; */
  font-size: 0.85em;
}

body > hr {
  margin-top: 0;
  margin-bottom: 0;
  border-color: var(--crust);
  width: 100%;
}

body > main {
  flex-grow: 1;
}

body > footer {
  flex-shrink: 1;
  margin-top: 2em;
  padding-bottom: 1.5em;
  text-align: center;
  font-size: 0.8rem;
  color: var(--subtext1);
}

/* LINKS */
/* TODO: different syling for emails/phones/etc */
/* a[rel=""] */

/* same site color */
/* same page coloring */
/* external site coloring */
/* visited alternatives for all the above */

/* same domain links */
a {
  color: var(--link-same-domain);
}

a:visited {
  color: var(--link-same-domain-visited);
}

/* same page links  */
a[href^="#"]:not([id]) {
  color: var(--link-same-page);
}

a[href^="#"]:not([id]):visited {
  color: var(--link-same-page-visited);
}

/* external links + opens in new page/tab */
a[href^="http:"],
a[href^="https:"],
a[target="_blank"] {
  color: var(--link-external);
}

a[href^="http:"]:visited,
a[href^="https:"]:visited,
a[target="_blank"]:visited {
  color: var(--link-external-visited);
}

a:focus,
a:hover {
  color: var(--blue) !important;
}

nav a,
figure a {
  border: none;
  background-color: unset;
}

h1 > a[href^="#"][id]:empty,
h2 > a[href^="#"][id]:empty,
h3 > a[href^="#"][id]:empty,
h4 > a[href^="#"][id]:empty,
h5 > a[href^="#"][id]:empty,
h6 > a[href^="#"][id]:empty {
  opacity: 0;
  position: absolute;
  left: -0.65em;
  font-weight: 400;
  line-height: 1.2;

  border: none;
  background-color: unset;
  color: var(--subtext0);
}

@media (min-width: 40rem) {
  h1 > a[href^="#"][id]:empty,
  h2 > a[href^="#"][id]:empty,
  h3 > a[href^="#"][id]:empty,
  h4 > a[href^="#"][id]:empty,
  h5 > a[href^="#"][id]:empty,
  h6 > a[href^="#"][id]:empty {
    left: -0.8em;
    text-decoration: none;
  }
}

h1 > a[href^="#"][id]:empty:focus,
h2 > a[href^="#"][id]:empty:focus,
h3 > a[href^="#"][id]:empty:focus,
h4 > a[href^="#"][id]:empty:focus,
h5 > a[href^="#"][id]:empty:focus,
h6 > a[href^="#"][id]:empty:focus,
h1 > a[href^="#"][id]:empty:hover,
h2 > a[href^="#"][id]:empty:hover,
h3 > a[href^="#"][id]:empty:hover,
h4 > a[href^="#"][id]:empty:hover,
h5 > a[href^="#"][id]:empty:hover,
h6 > a[href^="#"][id]:empty:hover {
  opacity: 0.7;
}

h1 > a[href^="#"][id]:empty:target,
h2 > a[href^="#"][id]:empty:target,
h3 > a[href^="#"][id]:empty:target,
h4 > a[href^="#"][id]:empty:target,
h5 > a[href^="#"][id]:empty:target,
h6 > a[href^="#"][id]:empty:target {
  opacity: 1;
}

h1 > a[href^="#"][id]:empty:before,
h2 > a[href^="#"][id]:empty:before,
h3 > a[href^="#"][id]:empty:before,
h4 > a[href^="#"][id]:empty:before,
h5 > a[href^="#"][id]:empty:before,
h6 > a[href^="#"][id]:empty:before {
  content: "§";
  color: var(--subtext0);
  text-decoration: none;
}

/* TYPOGRAPHY */
h1,
h2,
h3,
h4,
h5,
h6 {
  line-height: 1.2;
  margin: 1.25em 0 0;
  color: var(--subtext0);
  text-decoration: none;
}

h1 {
  font-size: 2.5em;
}

h2 {
  font-size: 1.75em;
}

h3 {
  font-size: 1.25em;
}

h4 {
  font-size: 1.14em;
}

h5 {
  font-size: 1em;
}

h6 {
  font-size: 1em;
}

/* TODO ASIDE 90 degrees headers */

/* NAV */
nav {
  margin: 1em 0;
}

nav ul {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  list-style: none;
  margin: 0;
  padding: 0;
}

nav li {
  margin-right: 1em;
  margin-bottom: 0.25em;
}

/* CARDS */
figure img {
  max-height: 8rem;
  max-width: 100%;
  width: auto;
  object-fit: contain;
}

figure {
  flex-basis: 100%;
  margin: 1em;
  border-radius: var(--border-radius);

  display: flex;
  flex-direction: column;

  color: var(--subtext1);
  background-color: var(--base);
  border: 1px solid var(--surface2);
  transition: box-shadow ease 0.33s, transform ease 0.33s;
}

figure.figure-full img {
  max-height: 10rem;
}

@media (min-width: 360px) {
  figure {
    flex-basis: calc(50% - 3em);
  }
}

@media (min-width: 768px) {
  figure {
    flex-basis: calc(33% - 2em);
  }
  figure.figure-full > a {
    flex-direction: row;
  }

  figure.figure-full {
    flex-direction: row;
  }

  figure.figure-full img {
    min-width: 35%;
  }
}

figcaption {
  color: var(--subtext1);
  font-size: 1.15em;
  margin: auto;
  margin-left: 0.5em;
  margin-right: 0.5em;
  text-align: center;
}

/* FIGURE INTERACTION */
figure > a {
  display: flex;
  height: 100%;
  flex-direction: column;
  text-decoration: none;
  color: var(--text) !important;
}

figure > a:hover {
  color: var(--text) !important;
}

/* figure:has(a):hover { */
figure:hover {
  display: flex;
  flex-direction: column;
  transform: translate(-0.15em, -0.15em);
  border: 1px solid var(--link-same-domain);
  box-shadow: 0px 5px 0px 5px var(--link-same-domain);
}
/* ... */

